test/valid/test4.3.puzzle
# This puzzle is unsolvable
4
 6  4 13 14
 0 10  5 12
 7  2 11  8
15  9  3  1
