test/invalid/test4.1.puzzle
# This puzzle is unsolvable
quatre
 6  0 14  3
 4  1  9 15
 7 11  8  2
10  5 12 13
